welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:65: error: not found: value initial
	while(getDirection() != initial)
                                ^