welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {	

	var goingRight = true; 
	
	while(!estArrive())
	{
		

		if(!estFaceMur())
		{
			avance();
		}
		else
		{
				if(goingRight)
				{
					gauche();
					avance();
					gauche();
					goingRight = false;
				}
				else
				{
					droite();
					avance();
					droite();
					goingRight = true;
				}
		
		}


		
	}






def estArrive() : Boolean = {

	var result = false;

	if(isWall(Direction.EST) && isWall(Direction.NORD))
	{
		result = true;
	}

		return result;

	
}
def isWall(dir : Direction) : Boolean = {

	var inital = getDirection();
	var result = false;
	
	while(getDirection() != dir)
	{
		droite();
	}

	while(getDirection() != initial)
	{
		droite();
	}

		return result;

}
}